# AutoPaste

./: CMakeLists.txt  ClipboardManager.cpp  ClipboardManager.h  HotkeyHandler.cpp  HotkeyHandler.h  InputSimulator.cpp  InputSimulator.h  LICENSE  README.md  main.cpp
